src/test/results/deca/codegen/invalid/Objet/IncorrectAssembly.res
LIGNE  99 -- erreur syntaxique
